--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "markdown-extra": "~0.1.0",
     "gulp": "~3.5.0",
     "gulp-load-tasks": "~0.1.1",
-    "gulp-jade": "~0.4.0"
+    "gulp-jade": "~0.4.0",
+    "markdown": "~0.5.0"
   }
 }
