--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp": "~3.5.0",
     "gulp-load-tasks": "~0.1.1",
     "gulp-jade": "~0.4.0",
-    "markdown": "~0.5.0"
+    "markdown": "~0.5.0",
+    "request-promise": "0.0.2"
   }
 }
