--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-load-tasks": "~0.1.1",
     "gulp-jade": "~0.4.0",
     "markdown": "~0.5.0",
-    "request-promise": "0.0.2"
+    "request-promise": "0.0.2",
+    "promise": "~3.2.0"
   }
 }
