--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-jade": "~0.4.0",
     "markdown": "~0.5.0",
     "request-promise": "0.0.2",
-    "promise": "~3.2.0"
+    "promise": "~3.2.0",
+    "gulp-stylus": "0.0.11"
   }
 }
