--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   },
   "author": "dddware",
   "homepage": "http://dddware.github.io",
+  "scripts": {
+    "start": "node_modules/gulp/bin/gulp.js"
+  },
   "devDependencies": {
-    "markdown-extra": "~0.1.0",
-    "gulp": "~3.8.0",
-    "gulp-load-tasks": "~0.1.1",
-    "gulp-jade": "~0.4.0",
-    "markdown": "~0.5.0",
-    "request-promise": "0.0.2",
-    "promise": "~3.2.0",
-    "gulp-stylus": "0.0.11",
     "autoprefixer": "~1.1.20140327",
-    "gulp-csso": "~0.2.6"
+    "gulp": "~3.8.0",
+    "gulp-csso": "~0.2.6",
+    "gulp-jade": "~0.4.0",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-stylus": "0.0.11",
+    "markdown": "~0.5.0",
+    "markdown-extra": "~0.1.0",
+    "promise": "~3.2.0",
+    "request-promise": "0.0.2"
   }
 }
