--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "dddware.github.io",
   "repository": {
     "type": "git",
@@ -11,7 +12,7 @@
   },
   "devDependencies": {
     "autoprefixer": "~1.1.20140327",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-csso": "~0.2.6",
     "gulp-jade": "^1.1.0",
     "gulp-load-plugins": "^1.5.0",
